--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,14 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin</title>
-    <script>
-        window.location.href = './pages/login/login.html';
-    </script>
+    <title>Admin Panel</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
+    <div class="container">
+        <h1>Welcome to the Admin Panel</h1>
+        <p class="description">Please log in to continue:</p>
+        <a class="login-button" href="login.html">Login</a>
+    </div>
 </body>
 
 </html>
