--- a/frontend/home.html
+++ b/frontend/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home-styles.css">
+    <link rel="stylesheet" href="css/home.css">
     <title>Admin</title>
 </head>
 
@@ -14,7 +14,7 @@
     </header>
     <main>
         <div class="options">
-            <a href="import-file.html" class="option">
+            <a href="import.html" class="option">
                 <div class="option-icon">&#128190;</div>
                 <div class="option-text">Import File</div>
             </a>
