--- a/frontend/file-transaction.html
+++ b/frontend/file-transaction.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transactions</title>
+    <title>Transações Importadas</title>
     <link rel="stylesheet" href="css/transactions.css">
 </head>
 
 <body>
+    <a href="home.html" class="back-link">Voltar</a>
     <div class="container">
+        <h1 class="page-title">Transações Importadas</h1>
         <table id="transactions-table">
             <thead>
                 <tr>
