--- a/frontend/home.html
+++ b/frontend/home.html
@@ -18,9 +18,9 @@
                 <div class="option-icon">&#128190;</div>
                 <div class="option-text">Import File</div>
             </a>
-            <a href="search-users.html" class="option">
+            <a href="all-file-transactions.html" class="option">
                 <div class="option-icon">&#128269;</div>
-                <div class="option-text">Search Users</div>
+                <div class="option-text">Transactions</div>
             </a>
         </div>
     </main>
