--- a/frontend/login.html
+++ b/frontend/login.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Operations Team Login</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="js/login.js"></script>
     <link rel="stylesheet" href="css/login.css">
 </head>
 
@@ -25,6 +24,7 @@
             <button type="submit">Login</button>
         </form>
     </div>
+    <script type="module" src="js/login.js"></script>
 </body>
 
 </html>
