a lot fo improvements

--- a/frontend/all-file-transactions.html
+++ b/frontend/all-file-transactions.html
@@ -5,20 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transações Importadas</title>
+    <title>Todas os arquivos importados</title>
     <link rel="stylesheet" href="css/all-file-transactions.css">
 </head>
 
 <body>
     <a href="home.html" class="back-link">Voltar</a>
     <div class="container">
-        <h1 class="page-title">Transações Importadas</h1>
+        <h1 class="page-title">Todas os arquivos importados</h1>
         <table id="transactions-table">
             <thead>
                 <tr>
                     <th>ID</th>
-                    <th>FileID</th>
-                    <th>Transaction ID</th>
                 </tr>
             </thead>
             <tbody>
