--- a/frontend/file-transaction.html
+++ b/frontend/file-transaction.html
@@ -28,7 +28,7 @@
             </tbody>
         </table>
     </div>
-    <script type="module" src="js/transactions.js"></script>
+    <script type="module" src="js/file-transactions.js"></script>
 </body>
 
 </html>
