--- a/frontend/login.html
+++ b/frontend/login.html
@@ -7,9 +7,14 @@
     <title>Operations Team Login</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/toast.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
+    <div id="toast-container">
+        <div id="toast"></div>
+    </div>
     <div class="login-container">
         <h1>Login</h1>
         <form id="login-form">
