--- a/frontend/seller.html
+++ b/frontend/seller.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/seller.css">
+    <link rel="stylesheet" href="css/global.css">
     <title>Seller Profile</title>
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
+    <a href="home.html" class="back-link">Voltar</a>
     <div class="seller-container">
         <div class="seller-container">
             <h1>Seller Profile</h1>
