--- a/frontend/import.html
+++ b/frontend/import.html
@@ -7,6 +7,8 @@
     <title>Import File</title>
     <link rel="stylesheet" href="css/toast.css">
     <link rel="stylesheet" href="css/import.css">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
