--- a/frontend/file-transaction.html
+++ b/frontend/file-transaction.html
@@ -47,7 +47,7 @@
         </div>
     </div>
     <script type="module" src="js/file-transactions.js"></script>
-    <script type="module" src="js/seller.functions.js"></script>
+    <script type="module" src="js/seller-functions.js"></script>
 </body>
 
 </html>
